
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {unsigned long addr; } ;


 int EXIT_SUCCESS ;
 int OPT_BRUTE ;
 int OPT_CHECK ;
 int OPT_VERBOSE ;
 int PORT ;
 void* alignment ;
 void* atoi (int ) ;
 int banner (char*) ;
 int exploit (char*,int,TYPE_1__) ;
 int getopt (int,char**,char*) ;
 void* nutcase ;
 int opt_flags ;
 int optarg ;
 int print_targets () ;
 void* steps ;
 unsigned long strtoll (int ,int *,int) ;
 TYPE_1__* target ;
 void* timeout ;
 int ussage (char*) ;

int main (int argc, char **argv) {
 int c;
 int port;
 int target_nr;
 unsigned long adress = 0x00;

 banner(argv[0]);

 if (argc < 2) {
  return ussage (argv[0]);
 }

 port = PORT; target_nr = -1;
 while ( (c = getopt (argc, argv, "o:n:x:a:p:t:s:bchv")) != -1 ) {
  switch (c) {
   case 'b':
    opt_flags |= OPT_BRUTE;
   break;

   case 'p':
    port = atoi(optarg);
   break;

   case 'x':
    adress = strtoll (optarg, ((void*)0), 16);
   break;

   case 'a':
    alignment = atoi(optarg);
   break;

   case 't':
    target_nr = atoi(optarg);
   break;

   case 'o':
    timeout = atoi(optarg);
   break;

   case 's':
    steps = atoi(optarg);
   break;

   case 'n':
    nutcase = atoi(optarg);
   break;

   case 'v':
    opt_flags |= OPT_VERBOSE;
   break;

   case 'c':
    opt_flags |= OPT_CHECK;
   break;

   case 'h':
   default:
    return ussage(argv[0]);
   break;
  }
 }

 if (target_nr == 0) {
  print_targets ();
  return EXIT_SUCCESS;
 } else if (target_nr == -1) {
  target_nr = 1;
 }
 if (adress != 0x00) {
  target[target_nr-1].addr = adress;
 }

 exploit (argv[argc-1], port, target[target_nr-1]);

 return EXIT_SUCCESS;
}
